--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"":"vendor\\nortesoft\\php-classes\\src"
+			"Nortesoft\\":"vendor\\nortesoft\\php-classes\\src"
 		}
 	}
 }
